--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+in<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -276,7 +276,7 @@
         <div class = "contact-info-upper-container">
           <div class = "contact-info-container">
           <img src = "./assets/email.png" alt="Email icon" class = "icon contact-icon email-icon">
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</p>
+          <p><a href="mailto: nikhil 2002yadav17@gmail.com">Example@gmail.com</p>
             </div>
             <div class = "contact-info-container">
               <img src = "./assets/linkedin.png" alt="LinkedIn icon" class = "icon contact-icon">
