--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ in<!DOCTYPE html>
         <div class = "contact-info-upper-container">
           <div class = "contact-info-container">
           <img src = "./assets/email.png" alt="Email icon" class = "icon contact-icon email-icon">
-          <p><a href="mailto: nikhil 2002yadav17@gmail.com">Example@gmail.com</p>
+          <p><a href="mailto:nikhil 2002yadav17@gmail.com"nikhil2002yadav17@gmail.com</p>
             </div>
             <div class = "contact-info-container">
               <img src = "./assets/linkedin.png" alt="LinkedIn icon" class = "icon contact-icon">
