--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-in<!DOCTYPE html>
+hi hiin<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -285,9 +285,7 @@ in<!DOCTYPE html>
                 </div>
         </div>
       </section>
-    <footer>
-      <p>Copright &#169; 2024 Nikhil Yadav. All Rights Reserved.</p>
-    </footer> 
+     
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
