--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class = "about-containers">
           <div class = "details-container color-container">
             <div class = "article-container">
-              <img src = "./assets/project-1.png" alt = "Project_1" class = "project-img">
+              <img src = "./assets/Project-1.jpg" alt = "Project_1" class = "project-img">
             </div>
             <h2 class = "experience-sub-title project-title">Project one</h2>
             <div class = "btn-container">
